[project]
name = "mtfbaseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "nibabel>=5.3.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
